qt6/webengine/gen_qwebengineloadinginfo.h

class QUrl;
class QWebEngineLoadingInfo;
typedef struct QUrl QUrl;
typedef struct QWebEngineLoadingInfo QWebEngineLoadingInfo;
QWebEngineLoadingInfo* QWebEngineLoadingInfo_new(QWebEngineLoadingInfo* other);
void QWebEngineLoadingInfo_operatorAssign(QWebEngineLoadingInfo* self, QWebEngineLoadingInfo* other);
QUrl* QWebEngineLoadingInfo_url(const QWebEngineLoadingInfo* self);
bool QWebEngineLoadingInfo_isErrorPage(const QWebEngineLoadingInfo* self);
int QWebEngineLoadingInfo_status(const QWebEngineLoadingInfo* self);
struct miqt_string QWebEngineLoadingInfo_errorString(const QWebEngineLoadingInfo* self);
int QWebEngineLoadingInfo_errorDomain(const QWebEngineLoadingInfo* self);
int QWebEngineLoadingInfo_errorCode(const QWebEngineLoadingInfo* self);
const QMetaObject* QWebEngineLoadingInfo_staticMetaObject();
void QWebEngineLoadingInfo_delete(QWebEngineLoadingInfo* self);